deploy/my-simple-app/templates/ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: my-app-ingress
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: my-app-app-chart-frontend
          port: 80
    - match: PathPrefix(`/api`)
      kind: Rule
      services:
        - name: my-app-app-chart-backend
          port: 8080
